--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server",
-    "dev": "nodemon src/server"
+  "start": "node src/server",
+  "dev": "nodemon src/server",
+  "test": "jest --detectOpenHandles",
+  "migrate:reset": "node ./src/tests/testMigrate.js",
+  "pretest": "npm run migrate:reset"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +23,9 @@
     "sequelize": "^6.29.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.4"
   },
   "overrides": {
     "semver": "^7.5.3"
